force-app/main/default/objects/Deal_Progress_Summary__c/Deal_Progress_Summary__c.object-meta.xml
<CustomObject>
    <label>딜 진행 요약</label>
    <nameField>
        <displayFormat>Deal-{0000}</displayFormat>
        <label>요약 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>딜 진행 요약</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>