force-app/main/default/objects/Deal_Progress_Summary__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>종료 여부</label>
    <type>Checkbox</type>
</CustomField>