force-app/main/default/objects/Deal_Progress_Summary__c/fields/Is_Won__c.field-meta.xml
<CustomField>
    <fullName>Is_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <label>수주 여부</label>
    <type>Checkbox</type>
</CustomField>