force-app/main/default/objects/Deal_Progress_Summary__c/fields/KPI_Count__c.field-meta.xml
<CustomField>
    <fullName>KPI_Count__c</fullName>
    <description>딜 건수. DealSummaryAggregator.cls의 Aggregate SOQL(COUNT)가 write하는 익명 집계 값 (스펙 §1.1). Formula가 아닌 일반 Number라야 집계가 값을 채울 수 있음.</description>
    <inlineHelpText>집계 대상 Opportunity 건수(COUNT)입니다. 개별 딜이 아니라 팀 단위 건수입니다.</inlineHelpText>
    <label>KPI 카운트</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>