force-app/main/default/objects/Deal_Progress_Summary__c/fields/Last_Synced_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced_At__c</fullName>
    <label>최종 동기화 일시</label>
    <type>DateTime</type>
</CustomField>