force-app/main/default/objects/Deal_Progress_Summary__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <label>보고 기간</label>
    <length>7</length>
    <type>Text</type>
</CustomField>