force-app/main/default/objects/Deal_Progress_Summary__c/fields/RM__c.field-meta.xml
<CustomField>
    <fullName>RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>담당 RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Progress_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>