force-app/main/default/objects/Deal_Progress_Summary__c/fields/Source_Opportunity_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity_Key__c</fullName>
    <externalId>true</externalId>
    <label>원천 영업기회 키</label>
    <length>255</length>
    <type>Text</type>
</CustomField>