force-app/main/default/objects/Deal_Progress_Summary__c/fields/Stage_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Stage_Changed_At__c</fullName>
    <label>단계 변경 일시</label>
    <type>DateTime</type>
</CustomField>