force-app/main/default/objects/Deal_Progress_Summary__c/fields/Team_Code__c.field-meta.xml
<CustomField>
    <fullName>Team_Code__c</fullName>
    <label>팀 코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>